fix: update sidebar

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="manifest" href="/site.webmanifest" />
+    <!-- Google Font -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@400..600"
+    />
+    <!-- End Google Font -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>joinhello</title>
   </head>
