file view, download and delete

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Outfit:wght@400..600"
     />
+        <!-- Font Awesome -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <!-- End Google Font -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>joinhello</title>
