--- a/index.html
+++ b/index.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-        <link rel="apple-touch-icon" sizes="180x180" href="/src/assets/images/logo.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/src/assets/images/logo.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/src/assets/images/logo.png" />
-    <link rel="manifest" href="/site.webmanifest" />
-    <!-- Google Font -->
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Outfit:wght@400..600"
-    />
-    <!-- End Google Font -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>joinhello</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+  <link rel="manifest" href="/site.webmanifest" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/src/assets/images/logo.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/src/assets/images/logo.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/src/assets/images/logo.png" />
+  <!-- Google Font -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Outfit:wght@400..600" />
+  <!-- End Google Font -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>joinhello</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
