--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Outfit:wght@400..600" />
   <!-- End Google Font -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>joinhello</title>
+  <title>Hello App</title>
 </head>
 
 <body>
