added superapp with /space and /stats

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Outfit:wght@400..600" />
   <!-- End Google Font -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://stijndv.com" />
+  <link rel="stylesheet" href="https://stijndv.com/fonts/Eudoxus-Sans.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    crossOrigin="anonymous" />
   <title>Hello App</title>
 </head>
 
