--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="https://stijndv.com/fonts/Eudoxus-Sans.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     crossOrigin="anonymous" />
-  <title>Hello.app | Space</title>
+  <title>hello.app | Decentralized</title>
 </head>
 
 <body>
