fixed to ask for only one signature, changed default title, added ipfs-style file check if it exists in s3 information pool when uploading, added file and folder memoiaztion

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       } else if (path === '/') {
         title = 'hello.app | Decentralized';
       } else {
-        title = 'hello.app'; // default title for other routes
+        title = 'hello.app | Decentralized'; // default title for other routes
       }
 
       document.title = title;
