added URL redirect temporary corrections

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
+  <title>hello.app | Stats</title>
   <script>
     (function () {
       const path = window.location.pathname;
@@ -13,7 +14,7 @@
       } else if (path.startsWith('/space')) {
         title = 'hello.app | Space';
       } else if (path.startsWith('/login')) {
-        title = 'hello.app | Login';
+        title = 'hello.app | Space';
       } else if (path === '/') {
         title = 'hello.app | Decentralized';
       } else {
