--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <link rel="canonical" href="https://hello.app/" />
   <meta charset="UTF-8" />
   <title>hello.app | Stats</title>
   <script>
