removed stats from title tag

--- a/index.html
+++ b/index.html
@@ -4,15 +4,12 @@
 <head>
   <link rel="canonical" href="https://hello.app/" />
   <meta charset="UTF-8" />
-  <title>hello.app | Stats</title>
   <script>
     (function () {
       const path = window.location.pathname;
       let title;
 
-      if (path.startsWith('/stats')) {
-        title = 'hello.app | Stats';
-      } else if (path.startsWith('/space')) {
+      if (path.startsWith('/space')) {
         title = 'hello.app | Space';
       } else if (path.startsWith('/login')) {
         title = 'hello.app | Space';
