--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 </head>
 
 <body>
-  <div id="root"></div>
+  <div id="root" class="h-screen"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
