--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 
 <head>
   <link rel="canonical" href="https://hello.app/" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Hello.app: Revolutionizing File Storage with Blockchain Technology</title>
+  <meta name="description" content="Discover how Hello.app is transforming file storage with a decentralized web3 infrastructure and blockchain for secure, efficient, and accessible storage for everyone.">
+  <meta name="keywords" content="file storage management, decentralized storage web3, blockchain technology storage, Hello.app tech entrepreneurs, secure file storage, decentralized node network, blockchain tech entrepreneurship">
+  <link rel="stylesheet" href="styles.css">
   <meta charset="UTF-8" />
   <script>
     (function () {
@@ -49,6 +54,8 @@
 <body>
   <div id="root" class="h-screen"></div>
   <script type="module" src="/src/main.tsx"></script>
+  <h2 style="position: fixed; top: 0; left: 0; z-index: 1000;"><a href="blog.html">hello.app</a></h2>
 </body>
+
 
 </html>
