add file in dist folder

--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello.app: Revolutionizing File Storage with Blockchain Technology</title>
-    <meta name="description" content="Discover how Hello.app is transforming file storage with a decentralized web3 infrastructure and blockchain for secure, efficient, and accessible storage for everyone.">
+    <meta name="description" content="Get 100GB for free storage.
+    Discover how Hello.app is transforming file storage with a decentralized web3 infrastructure and blockchain for secure, efficient, and accessible storage for everyone.">
     <meta name="keywords" content="file storage management, decentralized storage web3, blockchain technology storage, Hello.app tech entrepreneurs, secure file storage, decentralized node network, blockchain tech entrepreneurship">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -14,7 +15,7 @@
     </header>
     <main>
         <section>
-            <h2>Meet the Founders</h2>
+            <h2>Meet the Founders hello.app</h2>
             <p>Alvaro Pintado Santaularia and Alexander Baikalov, the young entrepreneurs behind Hello.app, aim to revolutionize the way we store files.</p>
             <img src="founders.jpg" alt="Founders Alvaro Pintado and Alexander Baikalov" />
         </section>
@@ -27,7 +28,7 @@
             <p>Discover the decentralized, web3-based approach to secure and efficient file storage at Hello.app.</p>
         </section>
         <section>
-            <h3>The Vision of Hello.app</h3>
+            <h3>The Vision of hello.app</h3>
             <p>Understanding the vision behind creating the world's largest decentralized file storage infrastructure.</p>
         </section>
         <section>
