--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <link rel="canonical" href="https://hello.app/" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hello.app: Revolutionizing File Storage with Blockchain Technology</title>
-  <meta name="description" content="Discover how Hello.app is transforming file storage with a decentralized web3 infrastructure and blockchain for secure, efficient, and accessible storage for everyone.">
+  <meta name="description" content="Get 100GB for free storage.
+  Discover how Hello.app is transforming file storage with a decentralized web3 infrastructure and blockchain for secure, efficient, and accessible storage for everyone.">
   <meta name="keywords" content="file storage management, decentralized storage web3, blockchain technology storage, Hello.app tech entrepreneurs, secure file storage, decentralized node network, blockchain tech entrepreneurship">
   <link rel="stylesheet" href="styles.css">
   <meta charset="UTF-8" />
