--- a/blog.html
+++ b/blog.html
@@ -3,29 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello.app: Revolutionizing File Storage with Blockchain Technology</title>
+    <title>hello.app: Revolutionizing File Storage with Blockchain Technology</title>
     <meta name="description" content="Get 100GB for free storage.
-    Discover how Hello.app is transforming file storage with a decentralized web3 infrastructure and blockchain for secure, efficient, and accessible storage for everyone.">
-    <meta name="keywords" content="file storage management, decentralized storage web3, blockchain technology storage, Hello.app tech entrepreneurs, secure file storage, decentralized node network, blockchain tech entrepreneurship">
+    Discover how hello.app is transforming file storage with a decentralized web3 infrastructure and blockchain for secure, efficient, and accessible storage for everyone.">
+    <meta name="keywords" content="file storage management, decentralized storage web3, blockchain technology storage, hello.app tech entrepreneurs, secure file storage, decentralized node network, blockchain tech entrepreneurship">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Hello.app: The New Era of File Storage</h1>
+        <h1>hello.app: The New Era of File Storage</h1>
     </header>
     <main>
         <section>
             <h2>Meet the Founders hello.app</h2>
-            <p>Alvaro Pintado Santaularia and Alexander Baikalov, the young entrepreneurs behind Hello.app, aim to revolutionize the way we store files.</p>
+            <p>Alvaro Pintado Santaularia and Alexander Baikalov, the young entrepreneurs behind hello.app, aim to revolutionize the way we store files.</p>
             <img src="founders.jpg" alt="Founders Alvaro Pintado and Alexander Baikalov" />
         </section>
         <section>
             <h2>From Idea to Potential Unicorn hello.app</h2>
-            <p>Learn about the journey of Hello.app from a simple idea to a potential unicorn in the tech world.</p>
+            <p>Learn about the journey of hello.app from a simple idea to a potential unicorn in the tech world.</p>
         </section>
         <section>
             <h2>A Decentralized Solution for File Storage hello.app</h2>
-            <p>Discover the decentralized, web3-based approach to secure and efficient file storage at Hello.app.</p>
+            <p>Discover the decentralized, web3-based approach to secure and efficient file storage at hello.app.</p>
         </section>
         <section>
             <h3>The Vision of hello.app</h3>
@@ -33,19 +33,19 @@
         </section>
         <section>
             <h3>How Decentralized Storage Works hello.app</h3>
-            <p>Explaining the mechanics of Hello.app's decentralized storage solution and its benefits over traditional services.</p>
+            <p>Explaining the mechanics of hello.app's decentralized storage solution and its benefits over traditional services.</p>
         </section>
         <section>
             <h3>Benefits of the Decentralized Web3 Ecosystem hello.ap</h3>
-            <p>Highlighting the sustainability, scalability, cost-effectiveness, and efficiency of Hello.app's storage solution.</p>
+            <p>Highlighting the sustainability, scalability, cost-effectiveness, and efficiency of hello.app's storage solution.</p>
         </section>
         <section>
             <h3>Our Challenges and Solutions hello.app</h3>
-            <p>Addressing the main challenges in developing a decentralized storage network and how Hello.app is overcoming them.</p>
+            <p>Addressing the main challenges in developing a decentralized storage network and how hello.app is overcoming them.</p>
         </section>
         <section>
             <h3>Pre-seed Round and the Future of hello.app</h3>
-            <p>Details on the recent funding round and what lies ahead for Hello.app in their quest to revolutionize file storage.</p>
+            <p>Details on the recent funding round and what lies ahead for hello.app in their quest to revolutionize file storage.</p>
         </section>
     </main>
     <footer>
