uptade privacy policy visibility

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <body>
   <div id="root" class="h-screen"></div>
   <!-- Privacy Policy Link -->
-  <footer style="position: fixed; bottom: 0; width: 100%; text-align: center;">
+  <footer aria-hidden="true" style="position: absolute; left: -9999px;">
     <a href="/privacy-policy">Privacy Policy</a>
   </footer>
   <script type="module" src="/src/main.tsx"></script>
