fix: General SEO & Accessibility Improvements

--- a/blog.html
+++ b/blog.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <style>
-       
         p {
             background-color: cyan; 
             padding: 20px;
@@ -22,6 +21,8 @@
     <title>
       hello.app: Revolutionizing File Storage with Blockchain Technology
     </title>
+    <meta name="title" content="hello.app: Revolutionizing File Storage with Blockchain Technology">
+    <meta name="author" content="hello.app">
     <meta
       name="description"
       content="Get 100GB for free storage.
