fix: little seo changes

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 			name="keywords"
 			content="file storage management, decentralized storage web3, blockchain technology storage, hello.app tech entrepreneurs, secure file storage, decentralized node network, blockchain tech entrepreneurship"
 		/>
+		<meta name="theme-color" content="#ffffff" />
 
 		<!-- Script to dynamically change the page title based on the route -->
 		<script>
@@ -55,10 +56,6 @@
 		<link
 			rel="stylesheet"
 			href="https://fonts.googleapis.com/css2?family=Outfit:wght@400..600"
-		/>
-		<link
-			rel="stylesheet"
-			href="https://stijndv.com/fonts/Eudoxus-Sans.css"
 		/>
 		<link
 			rel="stylesheet"
