fix: fixes merge

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<meta name="robots" content="index, follow">
 		<meta
 			name="description"
-			content="Get 100GB for free storage. Discover how hello.app is transforming file storage with a decentralized web3 infrastructure and blockchain for secure, efficient, and accessible storage for everyone."
+			content="Get 100GB for free storage. Discover how hello.app is transforming file storage with a decentralized web3 infrastructure and blockchain."
 		/>
 		<meta
 			name="keywords"
