fix: link fixes, general optimizations, seo fixes & unused library removed

--- a/blog.html
+++ b/blog.html
@@ -37,7 +37,7 @@
   <body>
     <nav>Simple Blog hello.app test</nav>
     <header>
-        <h2><a href="hello.app" >hello.app</a></h2>
+        <h2><a href="https://hello.app/" >hello.app</a></h2>
       <h3>hello.app: The New Era of File Storage</h3>
     </header>
     <main>
