--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			content="hello.app: Revolutionizing File Storage with Blockchain Technology"
 		/>
 		<meta name="author" content="hello.app" />
-		<meta name="robots" content="index, follow">
+		<meta name="robots" content="index, follow" />
 		<meta
 			name="description"
 			content="Get 100GB for free storage. Discover how hello.app is transforming file storage with a decentralized web3 infrastructure and blockchain."
@@ -108,7 +108,7 @@
 		<div id="root" class="h-screen"></div>
 		<!-- Privacy Policy Link -->
 		<footer aria-hidden="true">
-			<a href="/privacy-policy">Privacy Policy</a>
+			<a href="https://hello.app/privacy-policy">Privacy Policy</a>
 		</footer>
 		<script type="module" src="/src/main.tsx"></script>
 		<script type="application/ld+json">
@@ -143,39 +143,9 @@
 				]
 			}
 		</script>
-		<script type="application/ld+json">
-			{
-				"@context": "http://schema.org",
-				"@type": "WebSite",
-				"url": "https://hello.app",
-				"name": "hello.app",
-				"description": "Private cloud storage manager providing secure and efficient storage solutions.",
-				"termsOfService": "https://docs.hello.app/hello.app-terms-and-conditions",
-				"potentialAction": [
-					{
-						"@type": "EntryPoint",
-						"urlTemplate": "https://hello.app/space/login",
-						"actionPlatform": [
-							"http://schema.org/DesktopWebPlatform",
-							"http://schema.org/IOSPlatform",
-							"http://schema.org/AndroidPlatform"
-						]
-					},
-					{
-						"@type": "EntryPoint",
-						"urlTemplate": "https://hello.app/stats",
-						"actionPlatform": [
-							"http://schema.org/DesktopWebPlatform",
-							"http://schema.org/IOSPlatform",
-							"http://schema.org/AndroidPlatform"
-						]
-					}
-				]
-			}
-		</script>
 
 		<h2 style="position: fixed; top: -10; left: 0; z-index: 1000;">
-			<a href="/blog.html">hello.app</a>
+			<a href="https://hello.app/blog.html">hello.app</a>
 		</h2>
 	</body>
 </html>
