seo: sitemap on robots.tst and manifest fix

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
 		<!-- Other related links -->
 		<link rel="canonical" href="https://hello.app" />
-		<link rel="manifest" href="/site.webmanifest" />
+		<link rel="manifest" href="https://hello.app/site.webmanifest" />
 		<link rel="preconnect" href="https://stijndv.com" />
 	</head>
 
