seo: canonical fix, index now api key & fixes

--- a/index.html
+++ b/index.html
@@ -77,7 +77,6 @@
 		/>
 
 		<!-- Other related links -->
-		<link rel="canonical" href="https://hello.app" />
 		<link rel="manifest" href="https://hello.app/site.webmanifest" />
 		<link rel="preconnect" href="https://stijndv.com" />
 	</head>
@@ -93,6 +92,7 @@
 				-o-transform: translateY(10000px);
 			}
 		</style>
+		<h1 class="seo-helper">Discover how hello.app is transforming file storage with a decentralized web3 infrastructure and blockchain.</h1>
 		<div class="seo-helper">
 			“hello.app” is a groundbreaking application that is revolutionizing
 			file storage. With a decentralized infrastructure based on
