Fix ViewPort Heigth

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta charset="UTF-8" />
 
 		<!-- Viewport meta tag for responsive design -->
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"  />
 
 		<!-- Page title -->
 		<title>
@@ -105,10 +105,10 @@
 			storage solution, hello.app is the answer. Join the decentralized
 			storage revolution! 🚀📁
 		</div>
-		<div id="root" class="h-screen"></div>
+		<div id="root" class="h-full"></div>
 		<!-- Privacy Policy Link -->
 		<footer aria-hidden="true">
-			<a href="https://hello.app/privacy-policy">Privacy Policy</a>
+			<a style="display: none; resize:none;" href="https://hello.app/privacy-policy">Privacy Policy</a>
 		</footer>
 		<script type="module" src="/src/main.tsx"></script>
 		<script type="application/ld+json">
@@ -145,7 +145,7 @@
 		</script>
 
 		<h2 style="position: fixed; top: -10; left: 0; z-index: 1000;">
-			<a href="https://hello.app/blog.html">hello.app</a>
+			<a style="display: none;" href="https://hello.app/blog.html">hello.app</a>
 		</h2>
 	</body>
 </html>
