change text meta description

--- a/blog.html
+++ b/blog.html
@@ -25,7 +25,7 @@
     <meta name="author" content="hello.app">
     <meta
       name="description"
-      content="Get 100GB for free storage.
+      content="Get 100GB of free storage.
     Discover how hello.app is transforming file storage with a decentralized web3 infrastructure and blockchain for secure, efficient, and accessible storage for everyone."
     />
     <meta
